--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.28"
+    "mongoose": "^5.9.28",
+    "mongoose-paginate-v2": "^1.3.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
