--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.16.1",
+    "aws-sdk": "^2.742.0",
     "bcrypt": "^5.0.0",
+    "busboy": "^0.3.1",
+    "cloudinary": "^1.23.0",
     "dotenv": "^8.2.0",
+    "firebase-admin": "^9.1.1",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
-    "mongoose-paginate-v2": "^1.3.9"
+    "mongoose-paginate-v2": "^1.3.9",
+    "shortid": "^2.2.15",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
